[gd_scene load_steps=5 format=3 uid="uid://blnqrmfnj2ko8"]

[ext_resource type="Texture2D" uid="uid://djxip0jsx0nnl" path="res://art/TeeleporterOn.png" id="1_eumkw"]
[ext_resource type="Script" uid="uid://ce0j2rxxhsci4" path="res://teleporter.gd" id="1_tuehi"]
[ext_resource type="Script" uid="uid://b8gxlgufxnb0y" path="res://teleporter_sprite.gd" id="3_kk6yu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eumkw"]
radius = 20.0

[node name="Teleporter" type="Area2D"]
collision_layer = 16
script = ExtResource("1_tuehi")

[node name="TeleporterSprite" type="Sprite2D" parent="."]
position = Vector2(3, 1)
scale = Vector2(0.0866667, 0.0866667)
texture = ExtResource("1_eumkw")
script = ExtResource("3_kk6yu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_eumkw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
